WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170381
Mac cmake buildfix after 214586
https://bugs.webkit.org/show_bug.cgi?id=170381
Summary
Mac cmake buildfix after 214586
Csaba Osztrogonác
Reported
2017-04-01 04:00:19 PDT
In file included from /Volumes/Data/slave/elcapitan-cmake-debug/build/Tools/TestRunnerShared/EventSerialization/mac/EventSerializerMac.mm:27: In file included from /Volumes/Data/slave/elcapitan-cmake-debug/build/Tools/TestRunnerShared/EventSerialization/mac/EventSerializerMac.h:29: /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WTF/wtf/BlockPtr.h:86:48: error: use of undeclared identifier 'std' return static_cast<Block*>(ptr)->f(std::forward<Args>(args)...); ^ ... In file included from /Volumes/Data/slave/elcapitan-cmake-debug/build/Tools/TestRunnerShared/EventSerialization/mac/EventSerializerMac.mm:31: In file included from /Volumes/Data/slave/elcapitan-cmake-debug/build/WebKitBuild/Debug/DerivedSources/ForwardingHeaders/WebCore/CoreGraphicsSPI.h:1: /Volumes/Data/slave/elcapitan-cmake-debug/build/Source/WebCore/platform/spi/cg/CoreGraphicsSPI.h:37:10: fatal error: 'ColorSync/ColorSync.h' file not found #include <ColorSync/ColorSync.h> ^
Attachments
Patch
(908 bytes, patch)
2017-04-01 04:03 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2017-04-01 04:03:23 PDT
Created
attachment 306046
[details]
Patch patch for EWS
Csaba Osztrogonác
Comment 2
2017-04-01 05:35:28 PDT
Comment on
attachment 306046
[details]
Patch Clearing flags on attachment: 306046 Committed
r214716
: <
http://trac.webkit.org/changeset/214716
>
Csaba Osztrogonác
Comment 3
2017-04-01 05:35:32 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 4
2017-04-01 05:48:38 PDT
Committed
r214717
: <
http://trac.webkit.org/changeset/214717
>
Csaba Osztrogonác
Comment 5
2017-04-01 06:51:34 PDT
forgot to mention
https://trac.webkit.org/changeset/214715/webkit
which was the first fix after the following build error: /Volumes/Data/slave/elcapitan-cmake-debug/build/Tools/WebKitTestRunner/mac/UIScriptControllerMac.mm:29:9: fatal error: 'EventSerializerMac.h' file not found #import "EventSerializerMac.h" ^
Csaba Osztrogonác
Comment 6
2017-04-01 07:15:46 PDT
Still broken ... Undefined symbols for architecture x86_64: "_OBJC_CLASS_$_EventStreamPlayer", referenced from: objc-class-ref in UIScriptControllerMac.mm.o "beginSwipeBackEventStream()", referenced from: WTR::UIScriptController::beginBackSwipe(OpaqueJSValue const*) in UIScriptControllerMac.mm.o "completeSwipeBackEventStream()", referenced from: WTR::UIScriptController::completeBackSwipe(OpaqueJSValue const*) in UIScriptControllerMac.mm.o ld: symbol(s) not found for architecture x86_64 clang: error: linker command failed with exit code 1 (use -v to see invocation) make[2]: *** [bin/WebKitTestRunner] Error 1 make[1]: *** [Tools/WebKitTestRunner/CMakeFiles/WebKitTestRunner.dir/all] Error 2 ... /Volumes/Data/slave/elcapitan-cmake-debug/build/Tools/TestRunnerShared/EventSerialization/mac/EventSerializerMac.mm:59:38: error: unknown type name 'CGSEventType'; did you mean 'CGEventType'? bool eventIsOfType(CGEventRef event, CGSEventType type) ^~~~~~~~~~~~ CGEventType ...
Csaba Osztrogonác
Comment 7
2017-04-03 06:26:26 PDT
unassign, I don't have time for it, maybe Alex?
Alex Christensen
Comment 8
2017-04-05 18:52:20 PDT
https://trac.webkit.org/changeset/214946/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug