Mac cmake buildfix after 214586. https://bugs.webkit.org/show_bug.cgi?id=170381

Unreviewed.

* wtf/BlockPtr.h:

Canonical link: https://commits.webkit.org/187297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214716 268f45cc-cd09-0410-ab3c-d52691b4dbfc